--- a/css/styles.css
+++ b/css/styles.css
@@ -1,6 +1,7 @@
-/*
-Selcetor universal
+
+/*Selcetor universal
 */
+@import url('https://fonts.googleapis.com/css2?family=Arimo:ital,wght@0,400..700;1,400..700&family=VT323&display=swap');
 
 *
 {
@@ -19,20 +20,28 @@ body
 
 }
 
+nav{
+    background-color: red;
+    width: 100%;
+}
+
 ul
 {
+    
     text-align: center;
     padding: 20px;
     font-family: 'Times New Roman', Times, serif;
-    font-size: 20px;
+    font-size: px;
     text-transform: uppercase;
 }
 
 li
 {
+
     display: inline; /*Para mostrar de forma horizontal*/
     margin: 3em;
     padding: 10px 30px; /*El padding va de arriba a la derecha */
+    font-family: VT323;
 }
 
 li a
@@ -47,6 +56,8 @@ hr
     background-color: black;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 3);
     margin: 20px 0px;
+    background: linear-gradient(to left, #ec08cd, #a302fa) ;
+    
 }
 
 li a:hover
@@ -69,6 +80,7 @@ Selector de Id
     padding: 20px;
     border-radius: 20px; /*Smooths out the border of the box*/
     box-shadow: 0px 2px 6px 0px #320;
+
 }
 
 #encabezado
@@ -80,7 +92,7 @@ Selector de Id
     margin: 1em; /*Unidad de medida relativa a algo.*/
     
     text-align: center;
-    font-family: Verdana, Geneva, Tahoma, sans-serif;
+    font-family: VT323;
     font-style: normal;
     font-size: 17px;
     padding-top: 15px;
@@ -93,16 +105,27 @@ Selector de Id
 Selector de clase
 */
 
+.logo
+{
+    width: auto;
+    height: auto;
+    border-radius: 25px;
+    display: block;
+    
+}
+
 .imagen
 {
     border-radius: 20Px;
+
 
 }
 
 .menu
 {
     height: auto;
-    width: 90%;
+    width: auto;
+
     background-color: #d10db0;
     margin: 1em;
     border-radius: 4px;
@@ -114,6 +137,7 @@ Selector de clase
     display: block;
     margin: 0 auto;
     max-width: 100%;
+    width: 330px;
     height: auto;
     
 }
@@ -126,17 +150,19 @@ Selector de clase
     font-size: 20px;
     border: transparent;
     font-weight: bold;
+    color: #fae585;
 }
 
 .descripcion
 {
-    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-family: Arimo;
     font-weight: 400px;
     text-align: justify;
     font-size: 17px;
     padding: 7px 21px;
     background-color: #8234ab;
     color: #000000;
+    
 }
 
 .boton
@@ -168,4 +194,19 @@ Selector de clase
     text-align: center;
     padding: 20px 10px;
     box-shadow: 0px 2px 6px 0px #320;
+}
+
+.tarjeta
+{
+    box-shadow: 0px 4px 8px 0 rgb(44, 41, 37);
+    overflow: hidden;
+    max-width: 330px;
+    height: 100%;
+    margin: auto;
+    text-align: center;
+    border: 2px solid;
+    border-radius: 10px;
+    border: transparent;
+    margin-bottom: 70px ;
+    margin-top: 70px;
 }
