Se le puso css al index y a independencia

--- a/css/styles.css
+++ b/css/styles.css
@@ -31,7 +31,7 @@ ul
     text-align: center;
     padding: 20px;
     font-family: 'Times New Roman', Times, serif;
-    font-size: px;
+    font-size: 30px;
     text-transform: uppercase;
 }
 
