--- a/css/flex.css
+++ b/css/flex.css
@@ -12,6 +12,7 @@
     padding: 10px;
     border: 2px solid black;
     width: 90%;
+    height: 300px;
 }
 
 .contenedorEnd
@@ -57,6 +58,7 @@
     padding: 10px;
     border: 2px solid black;
     width: 90%;
+    height: 500px;
 }
 
 .contenedorItemEnd
@@ -69,6 +71,7 @@
     padding: 10px;
     border: 2px solid black;
     width: 90%;
+    height: 500px;
 }
 
 .contenedorItemCenter
@@ -81,6 +84,7 @@
     padding: 10px;
     border: 2px solid black;
     width: 90%;
+    height: 500px;
 }
 
 .contenedorCenter
