--- a/css/styles.css
+++ b/css/styles.css
@@ -136,10 +136,8 @@ Selector de clase
 {
     display: block;
     margin: 0 auto;
-    max-width: 100%;
-    width: 330px;
-    height: auto;
-    
+    width: 25em;
+    height: 240px;
 }
 
 .modelo
@@ -149,6 +147,7 @@ Selector de clase
     font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
     font-size: 20px;
     border: transparent;
+    background-color: #a52ca5;
     font-weight: bold;
     color: #fae585;
 }
@@ -158,7 +157,10 @@ Selector de clase
     font-family: Arimo;
     font-weight: 400px;
     text-align: justify;
-    font-size: 17px;
+    word-spacing: 5px;
+    line-height: 28px;
+    font-size: 21px;
+    height: 200px;
     padding: 7px 21px;
     background-color: #8234ab;
     color: #000000;
@@ -200,8 +202,9 @@ Selector de clase
 {
     box-shadow: 0px 4px 8px 0 rgb(44, 41, 37);
     overflow: hidden;
-    max-width: 330px;
+    max-width: 25em;
     height: 100%;
+    
     margin: auto;
     text-align: center;
     border: 2px solid;
@@ -210,3 +213,18 @@ Selector de clase
     margin-bottom: 70px ;
     margin-top: 70px;
 }
+
+
+
+
+
+.productoFlex
+{
+    display: flex;
+    justify-content: space-between;
+    flex-wrap: wrap;
+    border-radius: 13px ;
+    background-color: #de7de7ab;
+    box-shadow: 2px 3px 10px rgb(8, 179, 164);
+}
+
